--- a/index.html
+++ b/index.html
@@ -18,35 +18,39 @@
     </div>
 
     <div class="hero">
-        <h1>This website is awesome</h1>
-        <p>
-            This website has some subtext that
-            goes here under the main title. It's 
-            a smaller font and the color is lower
-            contrast.
-        </p>
-        <div class="heroimg">this is a placeholder for an image</div>
-        <button type="button">Sign up</button>
+        <div class="content">
+            <h1>This website is awesome</h1>
+            <p>
+                This website has some subtext that
+                goes here under the main title. It's 
+                a smaller font and the color is lower
+                contrast.
+            </p>
+            <button>Sign up</button>
+        </div>
+        <div class="heroimg">this is a placeholder for an image</div> 
     </div>
 
     <div class="lists">
         <h1>Some random information.</h1>
 
-        <div class="box">
-            <div class="boximg"></div>
-            <p>this is some subtext under an ilustration or image</p>
-        </div>
-        <div class="box">
-            <div class="boximg"></div>
-            <p>this is some subtext under an ilustration or image</p>
-        </div>
-        <div class="box">
-            <div class="boximg"></div>
-            <p>this is some subtext under an ilustration or image</p>
-        </div>
-        <div class="box">
-            <div class="boximg"></div>
-            <p>this is some subtext under an ilustration or image</p>
+        <div class="boxes">
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
+            <div class="box">
+                <div class="boximg"></div>
+                <p>this is some subtext under an ilustration or image</p>
+            </div>
         </div>
     </div>
 
@@ -59,8 +63,10 @@
     </div>
 
     <div class="end">
-        <h4>Call to action! It's time!</h4>
-        <p>Sign up for our product by clicking that button right over there</p>
+        <div class="text">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button right over there</p>
+        </div>
         <button type="endbutton">Sign up</button>
     </div>
 
